[package]
name = "poker-server"
version = "0.1.0"
authors = ["Kevin Duff <kevinkelduff@gmail.com>"]

[[bin]]
name = "kevpoker"
path = "src/app.rs"

[dependencies]
rs_poker = "0.4.0"
rand = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.5", features = ["v4"] }
rocket = "0.3.5"
rocket_contrib = "0.3.5"
rocket_codegen = "0.3.5"
